--- a/index.html
+++ b/index.html
@@ -202,15 +202,15 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 367 <br />📁<em> Υποθέσεις:</em>
-            2745 <br />
+            2748 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
             🥇 22/5/2014
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 31/1/2018
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ <br />🥉 13/2/2019
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br /><br />
+            🥈 2/3/2016
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ <br />🥉 31/1/2018
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
@@ -227,7 +227,7 @@
             - 10/2/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            10/5/2022, 3:15:01 μ.μ.
+            10/5/2022, 3:30:01 μ.μ.
           </p>
         </section>
       </main>
