--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 375 <br />📁<em> Υποθέσεις:</em>
-            2890 <br />
+            2889 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -212,22 +212,22 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ <br />🥉 31/1/2018
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 28/1/2014
+            🥇 15/12/2017
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 24/4/2015
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 16/12/2015
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
+            🥈 3/1/2018
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />🥉 12/3/2018
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 17/1/2019
             - 13/1/2026
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 3/4/2015
-            - 22/3/2022
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 16/12/2015
-            - 19/10/2021
-            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
+            🥈 4/9/2018
+            - 27/9/2022
+            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 22/11/2018
+            - 15/11/2021
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            19/5/2022, 6:15:01 μ.μ.
+            19/5/2022, 6:30:01 μ.μ.
           </p>
         </section>
       </main>
