--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 378 <br />📁<em> Υποθέσεις:</em>
-            2921 <br />
+            2920 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -223,11 +223,11 @@
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             🥈 17/1/2019
             - 13/1/2026
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 10/7/2015
-            - 18/10/2021
-            ΠΡΩΤΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 16/12/2015
+            - 19/10/2021
+            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            23/5/2022, 7:00:02 μ.μ.
+            23/5/2022, 7:15:02 μ.μ.
           </p>
         </section>
       </main>
