--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ <br />🥉 31/1/2018
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 10/7/2012
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
-            🥈 28/1/2014
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 14/4/2014
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
+            🥇 23/10/2009
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            🥈 1/11/2010
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 10/7/2012
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 14/4/2014
-            - 12/10/2021
+            🥇 17/7/2012
+            - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 17/1/2019
-            - 13/1/2026
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 16/12/2015
-            - 19/10/2021
-            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
+            🥈 3/4/2014
+            - 8/3/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 11/3/2013
+            - 10/2/2022
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            23/5/2022, 8:00:02 μ.μ.
+            23/5/2022, 8:15:01 μ.μ.
           </p>
         </section>
       </main>
