--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ <br />🥉 31/1/2018
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 23/10/2009
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 1/11/2010
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 10/7/2012
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br /><br />
+            🥇 10/7/2012
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
+            🥈 20/11/2012
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 13/12/2012
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 17/7/2012
             - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 3/4/2014
-            - 8/3/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 11/3/2013
-            - 10/2/2022
+            🥈 1/11/2010
+            - 4/4/2019
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 19/3/2014
+            - 7/12/2021
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            27/5/2022, 7:15:01 μ.μ.
+            27/5/2022, 7:30:01 μ.μ.
           </p>
         </section>
       </main>
