--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 381 <br />📁<em> Υποθέσεις:</em>
-            2973 <br />
+            2974 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -212,22 +212,22 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ <br />🥉 31/1/2018
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 10/7/2012
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />
-            🥈 20/11/2012
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 13/12/2012
+            🥇 23/10/2009
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            🥈 10/7/2012
+            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 20/11/2012
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 17/7/2012
             - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 1/11/2010
-            - 4/4/2019
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 19/3/2014
+            🥈 19/3/2014
             - 7/12/2021
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 14/4/2014
+            - 12/10/2021
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            27/5/2022, 7:30:01 μ.μ.
+            27/5/2022, 7:45:01 μ.μ.
           </p>
         </section>
       </main>
